--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
       "jest": true
   },
   "rules": {
-    "class-methods-use-this": 0
+    "class-methods-use-this": 0,
+    "no-underscore-dangle": 0
 }
 }
