--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-server": "babel src --out-dir dist -s",
     "clean": "rm -rf dist && mkdir dist",
     "build": "yarn run clean && yarn run build-server",
-    "serve": "node dist/bin/www.js",
+    "serve": "NODE_ENV=production node dist/bin/www.js",
     "start": "NODE_ENV=production yarn run build && yarn run serve",
     "start:dev": "NODE_ENV=development nodemon --exec babel-node src/bin/www.js",
     "lint": "node_modules/.bin/eslint ./src",
@@ -31,16 +31,19 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-eslint": "^10.0.1",
+    "babel-preset-env": "^1.7.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "nodemon": "^1.18.9"
+  },
+  "engines": {
+    "node": "8.12.0"
   }
 }
